# hubo_arm

./: .gitignore  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  doInstall.sh  doInstall.sh~  doInstall2.sh
src/: harmctrl.c  hubo_kin.f  hubo_kin.mac
